--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "sequelize": "^4.42.0",
-    "tedious": "^3.0.1"
+    "tedious": "^3.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
